tests/NormalTests/paczka1/fuzzy1/62772402.err
Error in line 6: LJ1SlgKsW A586 59,0
Error in line 16: zrbvlT11i96 A586 23,9
Error in line 20: mgooiv A133 6,1
Error in line 27: Etu3nZFTz A948 11,7
Error in line 28: Etu3nZFTz S189 12,2
Error in line 32: Etu3nZFTz A133 27,0
Error in line 30: A586 A586 30,6
Error in line 37: g0nc5hz98 A948 96,79
